Removing the technical support lemmas.
Cite them instead.

--- a/master.tex
+++ b/master.tex
@@ -3182,319 +3182,7 @@ Korollar \ref{cor:sp-konjugation}:
 
 
 Weil $\pi$ die Partition $\mathrm{SP}\left(G\right)$ auf sich selbst
-abbildet, gilt per Definition $\pi\in\mathrm{Stab}_{U}\left\{ \mathrm{SP}\left(G\right)\right\} $.\end{proof}
-\begin{lem}
-\label{lem:lemma-19}(Lemma 19 aus \cite{anderson_et_al:LIPIcs:2014:4445})
-
-Für $\epsilon\in\mathbb{R}_{\left[0,1\right[}$, jedes hinreichend
-große Universum $U=\left[1,n\right]$ mit $n\geqslant\exp\frac{4}{\epsilon}$
-und jede Partition $\mathcal{P}\in\mathrm{Part}_{U}$ gilt:
-
-Falls der Index des Mengenstabilisators von $\mathcal{P}$ subexponentiell
-in $n$ ist,
-\[
-s\coloneqq\frac{\left|\mathrm{Sym}_{U}\right|}{\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right|}
-\]
-\[
-n\leqslant s\leqslant2^{n^{1-\epsilon}}
-\]
-dann enthält $\mathcal{P}$ entweder $\mathcal{O}\left(n^{1-\epsilon}\right)$
-oder $n-\mathcal{O}\left(n^{1-\epsilon}\right)$ viele Elemente.
-\[
-\min\left\{ \left|\mathcal{P}\right|,n-\left|\mathcal{P}\right|\right\} \leqslant\frac{8}{\epsilon}\frac{\log s}{\log n}
-\]
-
-\end{lem}
-Diese Beziehung ist an der Repräsentation des Mengenstabilisators
-als Erzeugnis erkennbar: 
-\begin{eqnarray*}
-\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\}  & = & \left\langle \mathrm{Stab}_{U}\left(\mathcal{P}\right)\cup\bigcup_{i=1}^{\left|U\right|}\mathrm{Sym}_{\mathcal{P}_{\mid i}}\right\rangle \\
-\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right| & = & \left|\mathrm{Stab}_{U}\left(\mathcal{P}\right)\right|\cdot\prod_{i=1}^{U}\left|\mathcal{P}_{\mid i}\right|!
-\end{eqnarray*}
-Damit der Index klein ist, muss die Gruppe selbst groß sein, was entweder
-einen großen Punktstabilisator oder eine große Anzahl gleich-mächtiger
-Elemente von $\mathcal{P}$ erfordert.
-\begin{proof}
-Sei $\epsilon\in\mathbb{R}_{\left[0,1\right[}$, $n\geqslant\exp\frac{4}{\epsilon}$,
-$U\coloneqq\left[1,n\right]$ und $\mathcal{P}\in\mathrm{Part}_{U}$
-mit der folgenden Bedingung:
-\[
-n\leqslant\frac{\left|\mathrm{Sym}_{U}\right|}{\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right|}\leqslant2^{n^{1-\epsilon}}
-\]
-
-\begin{enumerate}
-\item Die Definition des Mengenstabilisators liefert eine kombinatorische
-Schranke für dessen Größe: Jede Permutation $\pi\in\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} $
-besteht aus einer Permutation der Elemente von $\mathcal{P}$, und
-einer Permutation $\pi_{i}\in\mathrm{Sym}_{P}$ für jedes Element
-$P\in\mathcal{P}$. 
-\[
-\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right|\leqslant\left|\mathcal{P}\right|!\prod_{P\in\mathcal{P}}\left|P\right|!
-\]
-
-\item Sei $k\coloneqq\left|\mathcal{P}\right|$, seien $P_{1},\cdots,P_{k}\in\mathcal{P}$
-die nach aufsteigender Mächtigkeit geordneten Elemente von $\mathcal{P}$,
-und seien $p_{1}\leqslant\cdots\leqslant p_{k}$ ihre Größen ($\sum_{i=1}^{k}p_{i}=n$).
-\[
-\left|\mathrm{Stab}_{U}\left\{ P\right\} \right|\leqslant k!\prod_{i=1}^{k}p_{i}!
-\]
-.
-\item Für zwei beliebige $p_{i},p_{j}$ mit $i\leqslant j$ gilt $p_{i}\leqslant p_{j}$
-und daher $\frac{p_{j}+1}{p_{i}}\geqslant1$. Es folgt:
-\begin{eqnarray*}
-\left|\mathrm{Stab}_{U}\left\{ P\right\} \right| & \leqslant & k!\prod_{i=1}^{k}p_{i}!\\
- & = & k!p_{1}!\cdots p_{i}!\cdots p_{j}!\cdots p_{k}!\\
- & \leqslant & k!p_{1}!\cdots p_{i}!\cdots p_{j}!\cdots p_{k}!\cdot\frac{p_{j}+1}{p_{i}}\\
- & = & k!p_{1}!\cdots\left(p_{i}-1\right)!\cdots\left(p_{j}+1\right)!\cdots p_{k}!
-\end{eqnarray*}
-
-\item Durch wiederholte Anwendung werden die ersten $k-1$ Fakultätsterme
-auf $1!$ reduziert. Der letzte wächst auf $\left(n-\left(k-1\right)\right)!$
-an: 
-\begin{eqnarray*}
-\left|\mathrm{Stab}_{U}\left\{ P\right\} \right| & \leqslant & k!\cdot\underset{k-1}{\underbrace{1!\cdots1!}}\cdot\left(n-\left(k-1\right)\right)!\\
- & = & k!\left(n+1-k\right)!
-\end{eqnarray*}
-.
-\item Daher ist $s$ von unten durch einen Binomialkoeffizienten beschränkt:
-\begin{eqnarray*}
-s=\frac{\left|\mathrm{Sym}_{U}\right|}{\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right|} & = & \frac{n!}{\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right|}\\
- & \geqslant & \frac{n!}{k!\left(n+1-k\right)!}\\
- & = & \frac{1}{n+1}\frac{\left(n+1\right)!}{k!\left(n+1-k\right)!}\\
- & = & \frac{1}{n+1}\binom{n+1}{k}\\
- & \geqslant & \frac{1}{n+1}\binom{n}{k}\\
- & = & \frac{1}{n+1}\binom{n}{\min\left(n,n-k\right)}
-\end{eqnarray*}
-
-\item Für den Binomialkoeffizienten gibt es auch eine untere Schranke: 
-\[
-\binom{n}{k}=\frac{n!}{k!\left(n-k\right)!}=\frac{\prod_{i=n-k+1}^{n}i}{\prod_{i=1}^{k}i}=\prod_{i=1}^{k}\frac{n-k+i}{i}
-\]
-\[
-\left(n-k+1\right)>\frac{\left(n-k+2\right)}{2}>\cdots>\frac{n}{k}
-\]
- 
-\[
-\binom{n}{k}\geqslant\left(\frac{n}{k}\right)^{k}
-\]
-
-\item Daher hat $s$ die folgende untere Schranke mit $k'\coloneqq\min\left(k,n-k\right)$:
-\[
-s\geqslant\frac{1}{n+1}\left(\frac{n}{k'}\right)^{k'}
-\]
-
-\item Es folgt:
-\begin{eqnarray*}
-\log s & \geqslant & k'\left(\log n-\log k'\right)-\log\left(n+1\right)\\
-\log s+\log\left(n+1\right) & \geqslant & k'\left(\log n-\log k'\right)
-\end{eqnarray*}
-
-\item Weil $s\geqslant n$ und $\log n\geqslant1$, folgt: 
-\begin{eqnarray*}
-4\log s & = & \log s+3\log s\\
- & \geqslant & \log s+3\log n\\
- & \geqslant & \log s+\log\left(n+1\right)\\
- & \geqslant & k'\left(\log n-\log k'\right)
-\end{eqnarray*}
-
-\item Weil $n\geqslant k'$, folgt $\log n\geqslant\log k'$:
-\begin{eqnarray*}
-4\log s & \geqslant & k'\left(\log n-\log k'\right)\\
- & \geqslant & k'
-\end{eqnarray*}
-
-\item Aus der Bedingung $s\leqslant2^{n^{1-\epsilon}}$ folgt:
-\begin{eqnarray*}
-\log k' & \leqslant & \log(4\log s)\\
- & = & \log\log s+2\\
- & \leqslant & \log\log2^{n^{1-\epsilon}}+2\\
- & = & \log n^{1-\epsilon}+2\\
- & = & \left(1-\epsilon\right)\log n+2
-\end{eqnarray*}
-
-\item Schließlich folgt:
-\begin{eqnarray*}
-4\log s & \geqslant & k'\left(\log n-\log k'\right)\\
- & \geqslant & k'\left(\log n-\left(\left(1-\epsilon\right)\log n+2\right)\right)\\
- & \geqslant & k'\left(\epsilon\log n-2\right)\\
- & \geqslant & k'\frac{\epsilon\log n}{2}\\
-\frac{8\log s}{\epsilon\log n} & \geqslant & k'
-\end{eqnarray*}
-
-\end{enumerate}
-\end{proof}
-Eine Partition, die höchstens $\frac{n}{2}$ Elemente enthält (und
-deren Stabilisator einen subexponentiellen Index $\left[\mathrm{Sym}_{U}:\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right]\leqslant2^{n^{1-\epsilon}}$
-hat) muss ein sehr großes Element enthalten.
-\begin{lem}
-\label{lem:lemma-20}(Lemma 20 aus \cite{anderson_et_al:LIPIcs:2014:4445})
-
-Für $\epsilon\in\mathbb{R}_{\left[0,1\right[}$, jedes hinreichend
-große Universum $U\coloneqq\left[1,n\right]$ mit $n\geqslant\exp\frac{8}{\epsilon^{2}}$
-und jede Partition $\mathcal{P}$ mit mit $\left|\mathcal{P}\right|\leqslant\frac{n}{2}$
-gilt:
-
-Falls der Index des Mengenstabilisators von $\mathcal{P}$ subexponentiell
-in $n$ ist, 
-\[
-s\coloneqq\frac{\left|\mathrm{Sym}_{U}\right|}{\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right|}
-\]
-\[
-n\leqslant s\leqslant2^{n^{1-\epsilon}}
-\]
-dann enthält das mächtigste Element von $\mathcal{P}$ alles bis auf
-einen sublinearen Teil des Universums: 
-\[
-\max\left\{ \left|P\right|\mid P\in\mathcal{P}\right\} \geqslant n-\frac{33}{\epsilon}\cdot\frac{\log s}{\log n}\geqslant n-\frac{33}{\epsilon}n^{1-\epsilon}
-\]
-\end{lem}
-\begin{proof}
-Sei wieder $\mathcal{P}=\left\{ P_{1},\cdots,P_{k}\right\} $ mit
-$p_{i}=\left|P_{i}\right|$ und $p_{1}<\cdots<p_{k}$. 
-\begin{eqnarray*}
-\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right| & \leqslant & k!\prod_{P\in\mathcal{P}}\left|P\right|!\\
- & = & k!p_{1}!\cdots p_{k}!
-\end{eqnarray*}
-
-
-Ohne Beschränkung der Annahme ist $p_{k-1}>1$, denn sonst ist $p_{k}=n-\left(k-1\right)$,
-und einer der folgenden Fälle tritt nach $\min\left\{ k,n-k\right\} <\frac{8}{\epsilon}\frac{\log s}{\log n}$
-ein:
-\begin{casenv}
-\item $k<\frac{8}{\epsilon}\frac{\log s}{\log n}<\frac{33}{\epsilon}\frac{\log s}{\log n}$,
-so ist $p_{k}=n-\left(k-1\right)\geqslant n-\frac{33}{\epsilon}\frac{\log s}{\log n}$.
-\item $k>n-\frac{8}{\epsilon}\frac{\log s}{\log n}\geqslant n-\frac{8}{\epsilon}\frac{n^{1-\epsilon}}{\log n}$,
-und es folgt für hinreichend große $n\geqslant\exp\frac{8}{\epsilon^{2}}$
-ein Widerspruch zu der Annahme $\left|\mathcal{P}\right|\leqslant\frac{n}{2}$:
-\begin{eqnarray*}
-\left|\mathcal{P}\right|=k & > & n-\epsilon n^{1-\epsilon}\\
- & = & n-\frac{\epsilon}{n^{\epsilon}}n\\
- & > & \frac{n}{2}
-\end{eqnarray*}
-
-\end{casenv}
-Die Umverteilung aus dem vorhergehenden Beweis wird nun wiederholt
-verwendet, um jeweils das erste Element mit $p_{i}>1$ zu Gunsten
-des letzten Elements mit $p_{j}<p_{k-1}$ zu verkleinern, so dass
-alle Terme $p_{1}\cdots p_{k-1}$ entweder den Wert $1$ oder $p_{k-1}$
-bekommen. Der letzte Term $p_{i}$ mit $1<p_{i}<p_{k-1}$ wird zu
-$p_{k-1}$ aufgerundet.
-\[
-p\coloneqq p_{k-1}
-\]
- 
-\begin{eqnarray*}
-\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right| & \leqslant & k!p_{1}!\cdots p!p_{k}!\\
- & \leqslant & k!\underset{k-\ell-1}{\underbrace{1!\cdots1!}}p_{i}!\underset{\ell-1}{\underbrace{p!\cdots p!}}p_{k}!\\
- & \leqslant & k!\left(p!\right)^{\ell}p_{k}!
-\end{eqnarray*}
-
-
-Hierbei ist $\ell$ wie folgt beschränkt:
-\begin{eqnarray*}
-k-\ell-1+\ell p\leqslant & \sum_{i=1}^{k-1}p_{i} & \leqslant k-1+\left(\ell+1\right)\left(p-1\right)
-\end{eqnarray*}
-
-
-Daher gilt:
-\begin{eqnarray*}
-\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right| & \leqslant & k!\left(p!\right)^{\ell}p_{k}\\
- & = & k!\left(p!\right)^{\ell}\left(n-\sum_{i=1}^{k-1}p_{i}\right)\\
- & \leqslant & k!\left(p!\right)^{\ell}\left(n-\left(k-1-\ell+\ell p\right)\right)!\\
- & = & k!\left(p!\right)^{\ell}\left(n-k-\ell\left(p-1\right)+1\right)!\\
- & \leqslant & \left(p!\right)^{\ell}\left(n-\ell\left(p-1\right)+1\right)!
-\end{eqnarray*}
-
-
-Die Stirling-Approximation $x!\leqslant e\sqrt{x}\left(\frac{x}{e}\right)^{x}$
-erlaubt die folgende Abschätzung:
-\begin{eqnarray*}
-\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right| & \leqslant & \left(p!\right)^{\ell}e\sqrt{n}\left(\frac{n}{e}\right)^{n-\ell\left(p-1\right)+1}\\
- & \leqslant & \left(e\sqrt{p}\left(\frac{p}{e}\right)^{p}\right)^{\ell}e\sqrt{n}\left(\frac{n}{e}\right)^{n-\ell\left(p-1\right)+1}
-\end{eqnarray*}
-
-
-Wenn diese Abschätzung in $s$ eingesetzt wird, erhalten wir die folgende
-Ungleichung:
-\begin{eqnarray*}
-s & = & \frac{n!}{\left|\mathrm{Stab}_{U}\left\{ \mathcal{P}\right\} \right|}\\
- & \geqslant & \frac{\left(\frac{n}{e}\right)^{n}}{\left(e\sqrt{p}\left(\frac{p}{e}\right)^{p}\right)^{\ell}e\sqrt{n}\left(\frac{n}{e}\right)^{n-\ell\left(p-1\right)+1}}\\
- & = & \frac{e^{p\ell}\cdot e^{n-\ell\left(p-1\right)+1}}{e^{n}\cdot e^{\ell}\cdot e}\cdot\frac{n^{n}}{\left(\sqrt{p}p^{p}\right)^{\ell}\sqrt{n}n^{n-\ell\left(p-1\right)+1}}\\
- & = & \frac{n^{\ell\left(p-1\right)-\frac{3}{2}}}{p^{\ell\left(p+\frac{1}{2}\right)}}
-\end{eqnarray*}
-
-
-Für den Logarithmus $\log s$ gilt dann:
-\begin{eqnarray*}
-\log s & \geqslant & \log\frac{n^{\ell\left(p-1\right)-\frac{3}{2}}}{p^{\ell\left(p+\frac{1}{2}\right)}}\\
- & \geqslant & \left(\ell\left(p-1\right)-\frac{3}{2}\right)\log n-\ell\left(p+\frac{1}{2}\right)\log p\\
- & \geqslant & \left(\ell\left(p-1\right)-\frac{3}{2}\right)\log n-\ell\left(p+\frac{1}{2}\right)\log p\\
- & = & \ell\left(p+\frac{1}{2}\right)\left(\log n-\log p\right)-\frac{3}{2}\left(\ell-1\right)\log n\\
- & \geqslant & \ell p\log\frac{n}{p}-\frac{3}{2}\left(\ell-1\right)\log n
-\end{eqnarray*}
-
-
-Weil $n<s$ und $\ell\geqslant1$, folgt:
-\begin{eqnarray*}
-\frac{5}{2}\log s & \geqslant & \ell p\log\frac{n}{p}-\frac{3}{2}\ell\log n\\
- & \geqslant & p\log\frac{n}{p}-\frac{3}{2}\log n\\
-\frac{8}{2}\log s & \geqslant & p\log\frac{n}{p}
-\end{eqnarray*}
-
-
-Und weil $p<p_{k}$ und $p+p_{k}<n$ folgt $\frac{n}{p}\geqslant2$,
-und daher $\log\frac{n}{p}\geqslant1$:
-\begin{eqnarray*}
-p & \leqslant & 4\log s
-\end{eqnarray*}
-
-
-Mit $p\leqslant4\log s\leqslant4n^{\left(1-\epsilon\right)}$ und
-$\log p\leqslant\left(1-\epsilon\right)\log n+2$ folgt dann:
-\begin{eqnarray*}
-\frac{5}{2}\log s & \geqslant & \ell p\left(\log n-\left(1-\epsilon\right)\log n-2\right)-\frac{3}{2}\ell\log n\\
- & \geqslant & \frac{\epsilon\ell p}{2}\log n-\frac{3}{2}\ell\log n\\
-5\frac{\log s}{\log n} & \geqslant & \ell\left(p\epsilon-3\right)
-\end{eqnarray*}
-
-\begin{casenv}
-\item Wenn $3\leqslant\frac{p\epsilon}{2}$, dann folgt $\frac{10}{\epsilon}\frac{\log s}{\log n}\geqslant\ell p$.
-Es gilt: 
-\begin{eqnarray*}
-\sum_{i=1}^{k-1}p_{i} & \leqslant & k-1+\left(\ell+1\right)\left(p-1\right)\\
- & \leqslant & k-1+2\ell p\\
- & \leqslant & \frac{8}{\epsilon}\frac{\log s}{\log n}+\frac{20}{\epsilon}\frac{\log s}{\log n}<\frac{33}{\epsilon}\frac{\log s}{\log n}
-\end{eqnarray*}
-
-\item Sonst ist $p<\frac{6}{\epsilon}$, und es folgt $\log p<3-\log\epsilon$.
-Es gilt:
-\begin{eqnarray*}
-\frac{5}{2}\log s & \geqslant & \ell p\left(\log n-\log p\right)-\frac{3}{2}\ell\log n\\
- & \geqslant & \ell p\left(\log n-\left(3-\log\epsilon\right)\right)-\frac{3}{2}\ell\log n
-\end{eqnarray*}
-Und nach $\log n\geqslant\frac{8}{\epsilon^{2}}\geqslant2\left(3-\log\epsilon\right)$
-folgt:
-\begin{eqnarray*}
-\frac{5}{2}\log s & \geqslant & \frac{\ell p}{2}\log n-\frac{3}{2}\ell\log n\\
- & = & \frac{\ell\left(p-3\right)}{2}\log n
-\end{eqnarray*}
-
-
-\begin{casenv}
-\item Falls $p\geqslant5$, dann folgt $\frac{25}{2\epsilon}\frac{\log s}{\log n}\geqslant\ell p$
-und damit:
-\[
-\sum_{i=1}^{k-1}p_{i}\leqslant\frac{8}{\epsilon}\frac{\log s}{\log n}+\frac{25}{\epsilon}\frac{\log s}{\log n}=\frac{33}{\epsilon}\frac{\log s}{\log n}
-\]
-
-\item Sonst ist $p<4$, und damit:
-\begin{eqnarray*}
-\sum_{i=1}^{k-1}p_{i} & \leqslant & p\left(k-1\right)\\
- & \leqslant & 4\cdot\frac{8}{\epsilon}\frac{\log s}{\log n}\leqslant\frac{33}{\epsilon}\frac{\log s}{\log n}
-\end{eqnarray*}
-
-\end{casenv}
-\end{casenv}
+abbildet, gilt per Definition $\pi\in\mathrm{Stab}_{U}\left\{ \mathrm{SP}\left(G\right)\right\} $.
 \end{proof}
 
 \section{Träger im Schaltkreis}
